Extended API with resource purpose filter